<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="ewallet_finish">完成</string>
    <string name="ewallet_money_num_space" tools:keep="@string/ewallet_money_num_space">¥ %1$.2f</string>
    <string name="ewallet_money_num">¥%1$.2f</string>
    <string name="ewallet_money_num_str" tools:keep="@string/ewallet_money_num_str">¥%1$s</string>
    <string name="ewallet_money_num_empty">¥ -.- -</string>
    <string name="ewallet_home_title">我的钱包</string>
    <string name="ewallet_balance_frozen_num" tools:keep="@string/ewallet_balance_frozen_num">冻结金额：¥%1$.2f</string>
    <string name="ewallet_home_bank_card_simple_title">未获取到您的银行卡信息</string>
    <string name="ewallet_home_bank_card_simple_type">储蓄卡</string>
    <string name="ewallet_home_bank_card_simple_id">****  ****  ****  ****</string>
    <string name="ewallet_home_bank_card_id_pre" tools:keep="@string/ewallet_home_bank_card_id_pre">****  ****  ****  %1$s</string>
    <string name="ewallet_home_recharge_remind_title" tools:keep="@string/ewallet_home_recharge_remind_title">充值提示</string>
    <string name="ewallet_home_recharge_remind_content" tools:keep="@string/ewallet_home_recharge_remind_content">钱包金额目前暂不支持APP内部消费，消费功能将于后续版本开放，请确认是否继续充值</string>
    <string name="ewallet_home_recharge_continue" tools:keep="@string/ewallet_home_recharge_continue">继续充值</string>
    <string name="ewallet_card_type_deposit" tools:keep="@string/ewallet_card_type_deposit">储蓄卡</string>
    <string name="ewallet_card_type_credit" tools:keep="@string/ewallet_card_type_credit">信用卡</string>
    <string name="ewallet_card_type_unknow" tools:keep="@string/ewallet_card_type_unknow">未知卡</string>
    <string name="ewallet_balance" tools:keep="@string/ewallet_balance">余额</string>
    <string name="ewallet_recharge">充值</string>
    <string name="ewallet_withdraw">提现</string>
    <string name="ewallet_balance_hint" tools:keep="@string/ewallet_balance_hint">钱包余额/元</string>
    <string name="ewallet_add_my_bankcard" tools:keep="@string/ewallet_add_my_bankcard">添加支付银行卡</string>
    <string name="ewallet_no_my_bankcard" tools:keep="@string/ewallet_no_my_bankcard">暂无支付银行卡</string>
    <string name="ewallet_exchange_safe_pay_bankcard_remind">换绑提示</string>
    <string name="ewallet_exchange_safe_pay_bankcard_remind_content">若换绑银行卡，需将当前钱包余额提现至已绑定的银行卡，同时将自动解绑原绑定银行卡，请确认是否继续？</string>
    <string name="ewallet_exchange_safe_pay_bankcard_sure">确认换绑</string>
    <string name="ewallet_exchange_is_give_up_change">是否放弃换绑安全卡</string>
    <string name="ewallet_exchange_give_up_change">放弃换绑</string>
    <string name="ewallet_exchange_safe_bank_card">绑定银行卡</string>
    <string name="ewallet_delete_bankcard">删除银行卡</string>
    <string name="ewallet_is_really_delete_bankcard">确定要删除此银行卡吗？</string>
    <string name="ewallet_delete_sure">确认删除</string>
    <string name="ewallet_recharge_type" tools:keep="@string/ewallet_recharge_type">充值方式</string>
    <string name="ewallet_recharge_num" tools:keep="@string/ewallet_recharge_num">充值金额</string>
    <string name="ewallet_recharge_num_type">¥</string>
    <string name="ewallet_recharge_success_pre" tools:keep="@string/ewallet_recharge_success_pre">成功充值¥%1$s</string>
    <string name="ewallet_recharge_success_date" tools:keep="@string/ewallet_recharge_success_date">预计%1$s分钟内到账</string>
    <string name="ewallet_recharge_hour_success_date" tools:keep="@string/ewallet_recharge_hour_success_date">预计%1$s小时内到账</string>
    <string name="ewallet_recharge_over_max" tools:keep="@string/ewallet_recharge_over_max">已超出该银行单笔支付限额，请降低支付金额后再试</string>
    <string name="ewallet_recharge_select_bankcard" tools:keep="@string/ewallet_recharge_select_bankcard">点击选择银行卡</string>
    <string name="ewallet_recharge_select_bankcard_dialog" tools:keep="@string/ewallet_recharge_select_bankcard_dialog">请选择充值银行卡</string>
    <string name="ewallet_recharge_limit" tools:keep="@string/ewallet_recharge_limit">单日交易限额¥%1$s</string>
    <string name="ewallet_recharge_limit_no_type" tools:keep="@string/ewallet_recharge_limit_no_type">单日交易限额 %1$s</string>
    <string name="ewallet_iknow">我知道了</string>
    <string name="ewallet_withdraw_all">全部提现</string>
    <string name="ewallet_withdraw_money_num_pre">可提现金额</string>
    <string name="ewallet_withdraw_to">提现至</string>
    <string name="ewallet_withdraw_no_deduct" tools:keep="@string/ewallet_withdraw_no_deduct">暂无手续费</string>
    <string name="ewallet_withdraw_limit" tools:keep="@string/ewallet_withdraw_limit">单笔交易限额¥%1$s</string>
    <string name="ewallet_withdraw_limit_no_type" tools:keep="@string/ewallet_withdraw_limit_no_type">单笔交易限额 %1$s</string>
    <string name="ewallet_withdraw_bank_card_select_title">请选择银行卡</string>
    <string name="ewallet_withdraw_bank_card_select_title_withdraw" tools:keep="@string/ewallet_withdraw_bank_card_select_title_withdraw">请选择到账银行卡</string>
    <string name="ewallet_withdraw_bank_card_select_title_recharge" tools:keep="@string/ewallet_withdraw_bank_card_select_title_recharge">请选择充值银行卡</string>
    <string name="ewallet_give_up">放弃</string>
    <string name="ewallet_withdraw_input_withdraw_password" tools:keep="@string/ewallet_withdraw_input_withdraw_password">请输入支付密码</string>
    <string name="ewallet_withdraw_click_get_bank_list" tools:keep="@string/ewallet_withdraw_click_get_bank_list">点击选择银行卡</string>
    <string name="ewallet_withdraw_select_bankcard" tools:keep="@string/ewallet_withdraw_select_bankcard">请选择银行卡</string>
    <string name="ewallet_withdraw_to_which_bank">到账银行</string>
    <string name="ewallet_withdraw_charge_num">提现手续费</string>
    <string name="ewallet_withdraw_money_num">提现金额</string>
    <string name="ewallet_send_verify_code_title">请输入验证码</string>
    <string name="ewallet_send_verify_code_remind">已将验证码发送至%1$s手机号上，请查收</string>
    <string name="ewallet_pay_success">支付成功</string>
    <string name="ewallet_pay_failed">支付失败</string>
    <string name="ewallet_pay_result_waitting">等待资金到账</string>
    <string name="ewallet_pay_type_wechat">微信支付</string>
    <string name="ewallet_pay_type_ali">支付宝支付</string>
    <string name="ewallet_pay_type_quick_card">银联快捷支付</string>
    <string name="ewallet_create_account" >开通钱包</string >
    <string name="ewallet_create_account_protocol" >《电子钱包服务协议》</string >
    <string name="ewallet_who_name" >电子钱包</string >
    <string name="ewallet_service_desc" >电子钱包用于托管您的资金，通过为钱包进行充值，实现在APP中进行消费，钱包中的资金支持随时提现。</string >
    <string name="ewallet_agree" >同意</string >
    <string name="ewallet_create_text" >开通</string >
    <string name="ewallet_certification_input_tip" >请确认您的身份信息准确无误</string >
    <string name="ewallet_certification_contact" >联系地址</string >
    <string name="ewallet_certification_occupation" >请选择您的职业</string >
    <string name="ewallet_fullname" >姓名</string >
    <string name="ewallet_input_real_name" >输入真实姓名</string >
    <string name="ewallet_id_num" >身份证号</string >
    <string name="ewallet_input_id_num" >请输入身份证号码</string >
    <string name="ewallet_location_desc" >所在地区</string >
    <string name="ewallet_occupation_desc" >职业</string >
    <string name="ewallet_location_desc_hint" >请选择所在省、市、区</string >
    <string name="ewallet_occupation_desc_hint" >办事人员及企业员工</string >
    <string name="ewallet_location_more" >详细地址</string >
    <string name="ewallet_location_more_hint" >如道路、小区门牌、楼栋号、单元室等5个字符以上</string >
    <string name="ewallet_next" >下一步</string >
    <string name="ewallet_certification_idcard" >身份认证</string >
    <string name="ewallet_certification_idcard2" >身份验证</string >
    <string name="ewallet_info_upload_desc" >根据国家相关规定，开通钱包功能需上传身份证照片，目前仅支持第二代身份证开通</string >
    <string name="ewallet_idcard_front_upload" >上传身份证人像面</string >
    <string name="ewallet_idcard_back_upload" >上传身份证国徽面</string >
    <string name="ewallet_takephoto_tip" >拍摄提示</string >
    <string name="ewallet_takephoto_suggestion1" >1、拍摄时请将证件平放，手机横向拍摄；</string >
    <string name="ewallet_takephoto_suggestion2" >2、确保身份证边框完整，字体及证件号码清晰可见；</string >
    <string name="ewallet_takephoto_suggestion3" >3、照片上传后，若不满意可点击照片重新拍摄。</string >
    <string name="ewallet_network_err" >网络不佳，请稍后重试</string >
    <string name="ewallet_invalid_idcard_to_upload_tip" >无效身份证照，请上传真实有效的本人身份证</string >
    <string name="ewallet_uploading" >上传中...</string >
    <string name="ewallet_idcard_upload" >证件上传</string >
    <string name="ewallet_takephoto" >拍照</string >
    <string name="ewallet_take_from_album" >从相册选择</string >
    <string name="ewallet_add_bankcard_desc" >请添加银行卡</string >
    <string name="ewallet_input_bankcard_tip" >请输入银行卡号</string >
    <string name="ewallet_input_phone_num_tip" >请输入银行预留手机号</string >
    <string name="ewallet_phone_num_tip" >预留手机号验证</string >
    <string name="ewallet_add_bankcard" >添加银行卡</string >
    <string name="ewallet_add_prefix" >请添加</string >
    <string name="ewallet_bankcard_suffix" >的银行卡</string >
    <string name="ewallet_input_verification_code" >请输入验证码</string >
    <string name="ewallet_unreceived_verification_code" >收不到验证码？</string >
    <string name="ewallet_send_verification_code_prefix" >已将验证码发送至</string >
    <string name="ewallet_send_verification_suffix" >手机号上，请查收</string >
    <string name="ewallet_fetch_again" >重新获取</string >
    <string name="ewallet_second_retry" >s后重试</string >
    <string name="ewallet_set_pay_pwd" >设置支付密码</string >
    <string name="ewallet_set_pay_password_again" >请再次输入支付密码</string >
    <string name="ewallet_set_pay_password_diff" >两次密码不一致，请重新设置</string >
    <string name="ewallet_verify_when_pay" >用于支付时的安全验证</string >
    <string name="ewallet_verify_when_pay2" >请验证支付密码以确认本人操作</string >
    <string name="ewallet_just_support_self_card" >仅支持绑定本人银联借记卡</string >
    <string name="ewallet_just_support_self_card2" >仅支持绑定本人银联卡</string >

    <string name="ewallet_certification_input_tip2" >请确认您的身份信息准确无误</string >
    <string name="ewallet_phone_num" >手机号码</string >

    <string name="ewallet_select_occupation" >职业选择</string >
    <string name="ewallet_cancel" >取消</string >
    <string name="ewallet_confirm" >确定</string >
    <string name="ewallet_select_city" >城市选择</string >
    <string name="ewallet_account_certificating" >证件审核中，此过程需要10-20秒，请耐心等待…</string >
    <string name="ewallet_password_too_simple" >您输入的密码过于简单，请重新输入</string >
    <string name="ewallet_account_create_success" >开通成功</string >
    <string name="ewallet_account_creating" >开启中，请稍后...</string >
    <string name="ewallet_ok" >是</string >
    <string name="ewallet_no" >否</string >
    <string name="ewallet_quit_set_password" >是否放弃设置支付密码</string >
    <string name="ewallet_quit_amend_password" >是否放弃修改支付密码</string >
    <string name="ewallet_amend_password" >修改支付密码</string >
    <string name="ewallet_input_pwd_to_verify" >请输入支付密码，以验证身份</string >
    <string name="ewallet_setting_new_pwd" >设置新支付密码</string >
    <string name="ewallet_setting_pay_pwd" >设置6位数字支付密码</string >
    <string name="ewallet_input_to_ensure" >请再次填写以确定</string >
    <string name="ewallet_error_pay_pwd" >支付密码错误</string >
    <string name="ewallet_manager_for_pay" >支付管理</string >

    
    <string name="ewallet_bankcard_trade_limit">单笔限额</string>
    <string name="ewallet_bankcard_day_limit">每日限额</string>
    <string name="ewallet_bill_list_title">账单</string>
    <string name="ewallet_bill_detail_title">账单详情</string>
    <string name="ewallet_pay_bank_sign_protocol">《无卡支付服务协议》</string>
    <string name="ewallet_pay">支付</string>
    <string name="ewallet_pay_type">支付方式</string>
    <string name="ewallet_pay_type_change">更换支付方式</string>
    <string name="ewallet_collection_person">收款方</string>
    <string name="ewallet_go_home">返回重新支付</string>
    <string name="ewallet_paying">支付中...</string>
    <string name="ewallet_sure_to_pay">确认支付</string>
    <string name="ewallet_pay_to_pre">付款给 %1$s</string>
    <string name="ewallet_toast_network_error_and_retry">网络不佳，请稍后重试</string>
    <string name="ewallet_toast_order_no_empty">订单号为空</string>
    <string name="ewallet_toast_member_no_empty">会员号为空</string>
</resources>